Adjusted the position and size to properly push the offscreen breadcrumb fully offscreen with the correct margins. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/Panel.less
+++ b/css/Panel.less
@@ -31,7 +31,7 @@
 /* Breadcrumb */
 .moon-panel-breadcrumb {
 	-webkit-transform: scale3d(1,1,1);
-	width: 230px;
+	width: 240px;
 	height: 370px;
 	position: absolute;
 	top: 0px;
@@ -48,13 +48,13 @@
 }
 .moon-panel-mini-header-wrapper {
 	-webkit-transform: scale3d(1,1,1);
-	margin: @moon-spotlight-outset 0 0;
+	margin: @moon-spotlight-outset 0 0 (@moon-app-keepout - @moon-spotlight-outset);
 	position: absolute;
 	bottom: 10px;
 	left: 0;
 	height: 360px;
 	width: 100%;
-	padding: 0 @moon-spotlight-outset @moon-spotlight-outset;
+	padding: 0 (@moon-spotlight-outset * 2) @moon-spotlight-outset @moon-spotlight-outset;
 	box-sizing: border-box;
 }
 .moon-panel-mini-header {
